--- a/app/src/main/res/layout/reminder_activity.xml
+++ b/app/src/main/res/layout/reminder_activity.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ouhk.watchout.ReminderActivity"
-    android:background="#FFFFFFFF">
+    android:background="#ffffff">
 
     <SearchView
         android:id="@+id/searchView"
