--- a/app/src/main/res/layout/edit_activity.xml
+++ b/app/src/main/res/layout/edit_activity.xml
@@ -24,6 +24,7 @@
         	android:layout_width="120dip"
         	android:layout_height="fill_parent"
         	android:paddingTop="5dip"
+            android:textSize="15dip"
         	android:text="@string/dateText" />
 
    	 	<Button
