--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ouhk.watchout.SettingActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
